--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <body>
       
-      <h1>Web Page of Alberto Pezzati</h1>
+<img src="https://avatars.githubusercontent.com/u/92857977?v=4">
+
     
 Hello there, awesome person!
  
